--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Summary/objective statement</h1>
     <p></p>
 
-    <h1>Education</h1>
+    <h1>Education devika</h1>
     <p></p>
     
     <h1>Work Experience</h1>
